# symbolic_polynomials

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deploy-ghpages.sh  index.html  rustfmt.toml  search-index.js
examples/: demo.rs  example.rs
implementors/symbolic_polynomials/: trait.Id.js
serde/: index.html  trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
serde/bytes/: index.html  struct.ByteBuf.html  struct.Bytes.html
serde/de/: enum.Unexpected.html  index.html  trait.Deserialize.html  trait.DeserializeSeed.html  trait.Deserializer.html  trait.EnumVisitor.html  trait.Error.html  trait.Expected.html  trait.MapVisitor.html  trait.SeqVisitor.html  trait.VariantVisitor.html  trait.Visitor.html
serde/ser/: index.html  struct.Impossible.html  trait.Error.html  trait.Serialize.html  trait.SerializeMap.html  trait.SerializeSeq.html  trait.SerializeStruct.html  trait.SerializeStructVariant.html  trait.SerializeTuple.html  trait.SerializeTupleStruct.html  trait.SerializeTupleVariant.html  trait.Serializer.html
serde_codegen_internals/: index.html  struct.Ctxt.html
serde_codegen_internals/ast/: enum.Body.html  enum.Style.html  index.html  struct.Field.html  struct.Item.html  struct.Variant.html
serde_codegen_internals/attr/: enum.Default.html  enum.EnumTag.html  enum.RenameRule.html  index.html  struct.Field.html  struct.Item.html  struct.Name.html  struct.Variant.html
serde_derive/: index.html
src/: composite.rs  functions.rs  integer_impl.rs  lib.rs  main.rs  monomial.rs  polynomial.rs  primitives.rs  registry.rs  traits.rs
src/monomial/: mod.rs  tests.rs
src/num/: lib.rs.html
src/num_bigint/: algorithms.rs.html  (+4 more)
symbolic_polynomials/: Monomial.t.html  Power.t.html  deduce_values.v.html  enum.Composite.html  fn.ceil.html  fn.deduce_values.html  fn.floor.html  fn.max.html  fn.min.html  fn.reduce.html  fn.reduce_monomial.html  fn.variable.html  index.html  sidebar-items.js  struct.Monomial.html  struct.Polynomial.html  trait.Coefficient.html  trait.Id.html  trait.Power.html
tests/: functions.rs  monomial.rs  monomials.rs  polynomial.rs
(+133 files in other folders)
