[package]
name = "symbolic_polynomials"
version = "0.1.0"
authors = ["Aleksandar Botev <botevmg@gmail.com>"]
description = "A library for manipulation of polynomials over the integers."
documentation = "http://Metadiff.github.io/symbolic_polynomials"
homepage = "http://Metadiff.github.io/symbolic_polynomials"
repository = "https://github.com/Metadiff/symbolic_polynomials"
readme = "README.md"
keywords = ["math", "symbolic", "polynomials"]
license = "Apache-2.0"
exclude = [ "examples/*" ]

[dependencies.num]
version = "*"
default-features = false

[lib]
name = "symbolic_polynomials"
path = "src/lib.rs"
doctest = true
