[package]
name = "symbolic_polynomials"
version = "0.1.1"
authors = ["Aleksandar Botev <botevmg@gmail.com>"]
description = "A library for manipulation of polynomials over the integers."
documentation = "http://Metadiff.github.io/symbolic_polynomials"
homepage = "http://Metadiff.github.io/symbolic_polynomials"
repository = "https://github.com/Metadiff/symbolic_polynomials"
readme = "README.md"
keywords = ["math", "symbolic", "polynomials"]
license = "MIT/Apache-2.0"
exclude = [ "examples/*" ]

[features]
default = ["serialize"]
serialize = ["serde", "serde_derive"]
repr_c = []

[dependencies]
num = { version = "0.1.36" }
serde = { version = "0.9.5", optional = true }
serde_derive = { version = "0.9.5", optional = true }

[lib]
name = "symbolic_polynomials"
path = "src/lib.rs"
doctest = true

[[example]]
name = "demo"
path = "examples/demo.rs"
